Archive2/85/e7e68e76138a35/output
main.cpp: In function 'int main()':
main.cpp:31:19: error: unable to deduce 'auto' from '& print'
     auto p_int = &print; // error
                   ^
